--- a/Code/Pokemon Pinball Gameboy/PhysicsGame.vcxproj
+++ b/Code/Pokemon Pinball Gameboy/PhysicsGame.vcxproj
@@ -180,7 +180,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="PhysicEntity.h" />
     <ClInclude Include="Source/Application.h" />
     <ClInclude Include="Source/Globals.h" />
     <ClInclude Include="Source/ModulePhysics.h" />
@@ -191,6 +190,7 @@
     <ClInclude Include="Source/p2Point.h" />
     <ClInclude Include="Source\ModuleGame.h" />
     <ClInclude Include="Source\ModulePlayer.h" />
+    <ClInclude Include="Source\PhysicEntity.h" />
     <ClInclude Include="Source\Timer.h" />
   </ItemGroup>
   <ItemGroup>
