--- a/Code/Pokemon Pinball Gameboy/PhysicsGame.vcxproj.filters
+++ b/Code/Pokemon Pinball Gameboy/PhysicsGame.vcxproj.filters
@@ -66,7 +66,7 @@
     <ClInclude Include="Source\ModulePlayer.h">
       <Filter>Headers</Filter>
     </ClInclude>
-    <ClInclude Include="PhysicEntity.h">
+    <ClInclude Include="Source\PhysicEntity.h">
       <Filter>Headers</Filter>
     </ClInclude>
   </ItemGroup>
